--- a/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
+++ b/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Forms\MainForm\FrmAdmin.Designer.cs">
       <DependentUpon>FrmAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MainForm\FrmMainUserPro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm\FrmMainUserPro.Designer.cs">
+      <DependentUpon>FrmMainUserPro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmAddAmountsReceiveds.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +124,12 @@
     </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmAddProject.Designer.cs">
       <DependentUpon>FrmAddProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ProjectProfileForm\FrmProjectManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProjectProfileForm\FrmProjectManage.Designer.cs">
+      <DependentUpon>FrmProjectManage.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmTheFinancerProjects.cs">
       <SubType>Form</SubType>
@@ -161,6 +173,7 @@
     <Compile Include="Forms\UserSystemForm\frmAddUser.Designer.cs">
       <DependentUpon>frmAddUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="OperationX.cs" />
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -186,11 +199,17 @@
     <EmbeddedResource Include="Forms\MainForm\FrmAdmin.resx">
       <DependentUpon>FrmAdmin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm\FrmMainUserPro.resx">
+      <DependentUpon>FrmMainUserPro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmAddAmountsReceiveds.resx">
       <DependentUpon>FrmAddAmountsReceiveds.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmAddProject.resx">
       <DependentUpon>FrmAddProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ProjectProfileForm\FrmProjectManage.resx">
+      <DependentUpon>FrmProjectManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmTheFinancerProjects.resx">
       <DependentUpon>FrmTheFinancerProjects.cs</DependentUpon>
