--- a/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
+++ b/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Forms\ActivitiesForm\FrmAddSubActivities.Designer.cs">
       <DependentUpon>FrmAddSubActivities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ActivitiesForm\FrmAllActivitesMange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ActivitiesForm\FrmAllActivitesMange.Designer.cs">
+      <DependentUpon>FrmAllActivitesMange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EmployeeForm\FrmAddEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ActivitiesForm\FrmAddSubActivities.resx">
       <DependentUpon>FrmAddSubActivities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ActivitiesForm\FrmAllActivitesMange.resx">
+      <DependentUpon>FrmAllActivitesMange.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EmployeeForm\FrmAddEmployee.resx">
       <DependentUpon>FrmAddEmployee.cs</DependentUpon>
