--- a/UcasProjectManagement/Ucas.Data/Ucas.Data.csproj
+++ b/UcasProjectManagement/Ucas.Data/Ucas.Data.csproj
@@ -59,8 +59,6 @@
     <Compile Include="CommandClass\AttachmentsClass.cs" />
     <Compile Include="CommandClass\ContractCmd.cs" />
     <Compile Include="CommandClass\EmployeeCmd.cs" />
-    <Compile Include="CommandClass\FinanciersCmd.cs" />
-    <Compile Include="CommandClass\FinanciersProjectCmd.cs" />
     <Compile Include="CommandClass\GroupCmd.cs" />
     <Compile Include="CommandClass\PeremissionsCmd.cs" />
     <Compile Include="CommandClass\PeremissionsHolderClass.cs" />
@@ -70,6 +68,8 @@
     <Compile Include="CommandClass\SalariesCmd.cs" />
     <Compile Include="CommandClass\SubActivityCmd.cs" />
     <Compile Include="CommandClass\SuppliersCmd.cs" />
+    <Compile Include="CommandClass\TheDonorsCmd.cs" />
+    <Compile Include="CommandClass\TheDonorsProjectCmd.cs" />
     <Compile Include="CommandClass\UsersCmd.cs" />
     <Compile Include="Contract.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
@@ -78,6 +78,9 @@
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="GroupsTb.cs">
+      <DependentUpon>UcasPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Monthlysalary.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="PeremissionsTb.cs">
@@ -99,19 +102,16 @@
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Salary.cs">
-      <DependentUpon>UcasPro.tt</DependentUpon>
-    </Compile>
     <Compile Include="Supplier.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
-    <Compile Include="TheFinancerProject.cs">
+    <Compile Include="TheDonors.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
-    <Compile Include="Thefinancier.cs">
+    <Compile Include="TheDonorsProject.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="UcasPro.Context.cs">
@@ -132,9 +132,6 @@
     <Compile Include="UsersTb.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="UcasPro.edmx.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -161,6 +158,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="UcasPro.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
