--- a/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
+++ b/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
@@ -56,6 +56,7 @@
     <Reference Include="Telerik.WinControls.Themes.Office2013Dark, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.Office2013Light, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.TelerikMetroBlue, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
+    <Reference Include="Telerik.WinControls.Themes.TelerikMetroTouch, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.VisualStudio2012Dark, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.VisualStudio2012Light, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.UI, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
@@ -206,6 +207,18 @@
     <Compile Include="Forms\UserSystemForm\FrmGroupManage.Designer.cs">
       <DependentUpon>FrmGroupManage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\UserSystemForm\FrmUserManagment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UserSystemForm\FrmUserManagment.Designer.cs">
+      <DependentUpon>FrmUserManagment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UserSystemForm\FrmUsersManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UserSystemForm\FrmUsersManage.Designer.cs">
+      <DependentUpon>FrmUsersManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="OperationX.cs" />
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -279,6 +292,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserSystemForm\FrmGroupManage.resx">
       <DependentUpon>FrmGroupManage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserSystemForm\FrmUserManagment.resx">
+      <DependentUpon>FrmUserManagment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserSystemForm\FrmUsersManage.resx">
+      <DependentUpon>FrmUsersManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
