--- a/UcasProjectManagement/Ucas.Data/Ucas.Data.csproj
+++ b/UcasProjectManagement/Ucas.Data/Ucas.Data.csproj
@@ -61,7 +61,7 @@
     <Compile Include="CommandClass\EmployeeCmd.cs" />
     <Compile Include="CommandClass\GroupCmd.cs" />
     <Compile Include="CommandClass\PeremissionsCmd.cs" />
-    <Compile Include="CommandClass\PeremissionsHolderClass.cs" />
+    <Compile Include="Special Classes\InformationsClass.cs" />
     <Compile Include="CommandClass\ProjectControlCmd.cs" />
     <Compile Include="CommandClass\ProjectExpensesCmd.cs" />
     <Compile Include="CommandClass\ProjectProfileCmd.cs" />
@@ -102,6 +102,7 @@
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Special Classes\AlertsClass.cs" />
     <Compile Include="Supplier.cs">
       <DependentUpon>UcasPro.tt</DependentUpon>
     </Compile>
@@ -160,6 +161,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Special Classes\ReadMe.txt" />
     <Content Include="UcasPro.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
