--- a/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
+++ b/UcasProjectManagement/UcasProWindowsForm/UcasProWindowsForm.csproj
@@ -55,6 +55,7 @@
     <Reference Include="Telerik.WinControls.RichTextBox, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.Office2013Dark, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.Office2013Light, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
+    <Reference Include="Telerik.WinControls.Themes.TelerikMetro, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.TelerikMetroBlue, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.TelerikMetroTouch, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.Themes.VisualStudio2012Dark, Version=2014.2.715.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
@@ -99,6 +100,18 @@
     <Compile Include="Forms\EmployeeForm\FrmContractsAdd.Designer.cs">
       <DependentUpon>FrmContractsAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\EmployeeForm\FrmContractsLookAndSave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EmployeeForm\FrmContractsLookAndSave.Designer.cs">
+      <DependentUpon>FrmContractsLookAndSave.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EmployeeForm\FrmContratsManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EmployeeForm\FrmContratsManage.Designer.cs">
+      <DependentUpon>FrmContratsManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EmployeeForm\FrmEmployeeMng.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,10 +148,10 @@
     <Compile Include="Forms\MainForm\FrmMainUserPro.Designer.cs">
       <DependentUpon>FrmMainUserPro.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\MainForm\FrmTheDonorsAndProjectAdd.cs">
+    <Compile Include="Forms\ProjectProfileForm\FrmTheDonorsAndProjectAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainForm\FrmTheDonorsAndProjectAdd.Designer.cs">
+    <Compile Include="Forms\ProjectProfileForm\FrmTheDonorsAndProjectAdd.Designer.cs">
       <DependentUpon>FrmTheDonorsAndProjectAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmAddAmountsReceiveds.cs">
@@ -153,17 +166,17 @@
     <Compile Include="Forms\ProjectProfileForm\FrmAddProject.Designer.cs">
       <DependentUpon>FrmAddProject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ProjectProfileForm\FrmOneProjectProfileManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProjectProfileForm\FrmOneProjectProfileManage.Designer.cs">
+      <DependentUpon>FrmOneProjectProfileManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmProjectManage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ProjectProfileForm\FrmProjectManage.Designer.cs">
       <DependentUpon>FrmProjectManage.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ProjectProfileForm\FrmTheFinancerProjects.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ProjectProfileForm\FrmTheFinancerProjects.Designer.cs">
-      <DependentUpon>FrmTheFinancerProjects.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\supplierForm\FrmAddsupplier.cs">
       <SubType>Form</SubType>
@@ -213,12 +226,6 @@
     <Compile Include="Forms\UserSystemForm\FrmUserManagment.Designer.cs">
       <DependentUpon>FrmUserManagment.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\UserSystemForm\FrmUsersManage.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\UserSystemForm\FrmUsersManage.Designer.cs">
-      <DependentUpon>FrmUsersManage.cs</DependentUpon>
-    </Compile>
     <Compile Include="OperationX.cs" />
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -239,6 +246,12 @@
     <EmbeddedResource Include="Forms\EmployeeForm\FrmContractsAdd.resx">
       <DependentUpon>FrmContractsAdd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EmployeeForm\FrmContractsLookAndSave.resx">
+      <DependentUpon>FrmContractsLookAndSave.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EmployeeForm\FrmContratsManage.resx">
+      <DependentUpon>FrmContratsManage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\EmployeeForm\FrmEmployeeMng.resx">
       <DependentUpon>FrmEmployeeMng.cs</DependentUpon>
     </EmbeddedResource>
@@ -257,7 +270,7 @@
     <EmbeddedResource Include="Forms\MainForm\FrmMainUserPro.resx">
       <DependentUpon>FrmMainUserPro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainForm\FrmTheDonorsAndProjectAdd.resx">
+    <EmbeddedResource Include="Forms\ProjectProfileForm\FrmTheDonorsAndProjectAdd.resx">
       <DependentUpon>FrmTheDonorsAndProjectAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmAddAmountsReceiveds.resx">
@@ -266,11 +279,11 @@
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmAddProject.resx">
       <DependentUpon>FrmAddProject.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ProjectProfileForm\FrmOneProjectProfileManage.resx">
+      <DependentUpon>FrmOneProjectProfileManage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProjectProfileForm\FrmProjectManage.resx">
       <DependentUpon>FrmProjectManage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ProjectProfileForm\FrmTheFinancerProjects.resx">
-      <DependentUpon>FrmTheFinancerProjects.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\supplierForm\FrmAddsupplier.resx">
       <DependentUpon>FrmAddsupplier.cs</DependentUpon>
@@ -295,9 +308,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserSystemForm\FrmUserManagment.resx">
       <DependentUpon>FrmUserManagment.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\UserSystemForm\FrmUsersManage.resx">
-      <DependentUpon>FrmUsersManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
